# task-related-neural-activity

./: .dockerignore  .git-blame-ignore-revs  .gitignore  LICENSE.txt  README.md  cli.py  dockerfile  pyproject.toml  setup.py
colab/: colab_analysis.ipynb  gpfa_example.ipynb  summarise_units.ipynb
config/: config.yaml
envs/: env.yaml
examples/: DownloadAllen2022Data.ipynb  analysis_functions.py  assorted.ipynb  data_info.md  describe_data.ipynb  example_data_access.ipynb  extract_useful_info.ipynb  simple_analysis.py  time_loading.py
examples/colab/: colab_starter.ipynb  gpfa_example.ipynb
experiments/: gpfa_condensed.py
tests/: __init__.py
trna/: __about__.py  __init__.py  allen.py  cca.py  common.py  config.yml  dimension_reduction.py  distance_measurement.py  filter_to_regions.py  gpfa.py  ibl.py  plot.py
workflow/: Snakefile
workflow/notebooks/: cca.ipynb  cca_simulation.ipynb  check_scaling.py  explore_structure.ipynb  gpfa_example.ipynb  procrustes.ipynb
workflow/rules/: analyse_data.smk  process_data.smk
workflow/scripts/: cca.py  count_trials.py  create_tables.py  gfpa.py  gpfa.py  plot_cells.py  split_tables.py
your_package/: cli.py  your_module.py
